--- a/amazon-clone/src/Components/Header/header.module.css
+++ b/amazon-clone/src/Components/Header/header.module.css
@@ -131,3 +131,47 @@
   border: 1px solid white;
   border-radius: 3px;
 }
+
+.lower_container ul {
+  display: flex;
+  /* font-family: inherit;
+  font-size: 12px;
+  line-height: 1em; */
+
+  list-style: none;
+  gap: 20px;
+  padding-left: 10px;
+}
+
+.lower_container {
+  /* width: 100%; */
+  background-color: #232f3e;
+  color: white;
+}
+
+.lower_container ul li {
+  padding: 8px;
+}
+
+.menu {
+  display: flex;
+  gap: 2px;
+  align-items: center;
+}
+
+/* responsive header style */
+
+@media screen and (max-width: 576px) {
+  .header_container {
+    display: flex;
+    flex-direction: column !important ;
+    height: auto;
+  }
+
+  .lower_container ul li:not(:first-child) {
+    display: none;
+  }
+  .language {
+    display: none;
+  }
+}
