--- a/amazon-clone/src/Components/Header/header.module.css
+++ b/amazon-clone/src/Components/Header/header.module.css
@@ -4,9 +4,13 @@
   margin: 0;
 }
 
-.header_container {
+.fixed {
   position: sticky;
   top: 0;
+  z-index: 100;
+}
+
+.header_container {
   background-color: #1a1a1a;
   display: flex;
   gap: 10px;
