--- a/amazon-clone/src/Pages/Results/results.module.css
+++ b/amazon-clone/src/Pages/Results/results.module.css
@@ -1,6 +1,6 @@
-.products_contianer {
+.products_container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1rf));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   max-width: 1450px;
   margin: 100px auto 100px auto;
   gap: 50px;
