--- a/amazon-clone/src/Components/Header/header.module.css
+++ b/amazon-clone/src/Components/Header/header.module.css
@@ -17,7 +17,7 @@
   align-items: center;
   color: white;
   height: 70px;
-  font-size: 20px;
+  /* font-size: 20px; */
 }
 
 .logo_container {
@@ -60,7 +60,6 @@
 .search select,
 .search input {
   padding: 10px;
-  /* font-size: 20px; */
   font-weight: bold;
   outline: 1px solid white;
 }
@@ -102,6 +101,23 @@
 .order_container a {
   color: white;
 }
+
+/* 
+.order__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 450px;
+    gap: 10px;
+  }
+  .order__container a {
+    text-decoration: none;
+    color: white;
+  }
+  .order__container p {
+    font-size: 13px;
+  } */
+
 .language {
   width: 100px;
   display: flex;
@@ -126,8 +142,8 @@
 .cart span {
   position: absolute;
   font-weight: bold;
-  top: 1px;
-  font-size: 20;
+  top: -4px;
+  font-size: 20px;
   background-color: #1a1a1a;
   left: 16px;
   color: orange;
@@ -135,24 +151,21 @@
 
 .order_container a:hover,
 .logo_container a:hover,
-.delivery:hover {
+.delivery:hover,
+.lower_container ul li:hover {
   border: 1px solid white;
   border-radius: 3px;
 }
 
 .lower_container ul {
   display: flex;
-  /* font-family: inherit;
-  font-size: 12px;
-  line-height: 1em; */
-
   list-style: none;
-  gap: 20px;
-  padding-left: 10px;
+  /* gap: 20px;
+  padding-left: 10px; */
+  gap: 5px;
 }
 
 .lower_container {
-  /* width: 100%; */
   background-color: #232f3e;
   color: white;
 }
